scaling and modelling section

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -906,6 +906,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\3R9CWM86\\Bonan et al. - 2003 - A dynamic global vegetation model for use with cli.pdf;C\:\\Users\\Me\\Zotero\\storage\\V227AIDZ\\j.1365-2486.2003.00681.html}
 }
 
+@article{bonanMovingIncorrectUseful2021,
+  title = {Moving beyond the Incorrect but Useful Paradigm: Reevaluating Big-Leaf and Multilayer Plant Canopies to Model Biosphere-Atmosphere Fluxes – a Review},
+  shorttitle = {Moving beyond the Incorrect but Useful Paradigm},
+  author = {Bonan, Gordon B. and Patton, Edward G. and Finnigan, John J. and Baldocchi, Dennis D. and Harman, Ian N.},
+  date = {2021-08-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {306},
+  pages = {108435},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2021.108435},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168192321001180},
+  urldate = {2021-08-08},
+  abstract = {The land surface models that provide surface fluxes of energy and mass to the atmosphere in weather forecast and climate models typically represent plant canopies as a homogenous single layer of phytomass without vertical structure (commonly referred to as a big leaf). This modeling paradigm harkens back to a 30–40-year-old debate about whether big-leaf models adequately simulate fluxes for vegetated surfaces compared to more complex and computationally costly multilayer canopy models. This article revisits that scientific debate. We review the early literature to place our findings in context and discuss recent advancements in roughness sublayer theory, observations of canopy structure and leaf traits, and computational methods that facilitate the use of multilayer models. Using a model with variable vertical resolution, we compare a multilayer canopy representation with the equivalent one-layer canopy to ask how well the one-layer canopy replicates the multilayer benchmark and to identify why differences occur. Comparisons with flux tower measurements at several forest sites spanning multiple years show that sensible heat flux, latent heat flux, gross primary production, and friction velocity for the one-layer canopy degrade in comparison to the benchmark multilayer canopy. For the forest sites considered, 5–10 canopy layers sufficiently reproduce the observed fluxes. Vertical variation of within-canopy air temperature, specific humidity, and wind speed in the multilayer canopy alters fluxes compared with the one-layer canopy. The vertical profile of leaf water potential, in which the upper canopy is water-stressed on dry soils, also causes differences between the one-layer and multilayer canopies. The differences between one-layer and multilayer canopies suggest that the land surface modeling community should revisit the big-leaf surface flux parameterizations used in models.},
+  langid = {english},
+  keywords = {Big-leaf model,Biosphere-atmosphere fluxes,Land surface model,Multilayer canopy model},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\HTT8YQAU\\Bonan et al. - 2021 - Moving beyond the incorrect but useful paradigm r.pdf;C\:\\Users\\Me\\Zotero\\storage\\9NXHH9YC\\S0168192321001180.html}
+}
+
 @article{bowmanWarmerWorldWill2014,
   title = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests: Evidence from {{Australian}} Temperate and Subtropical Eucalypt Forests},
   shorttitle = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests},
@@ -1958,6 +1976,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\F7J7B8GL\\Derroire et al. - 2018 - Contrasting patterns of leaf trait variation among.pdf}
 }
 
+@article{dettoSpatialVariabilityTropical2015,
+  title = {Spatial Variability in Tropical Forest Leaf Area Density from Multireturn Lidar and Modeling},
+  author = {Detto, Matteo and Asner, Gregory P. and Muller-Landau, Helene C. and Sonnentag, Oliver},
+  date = {2015},
+  journaltitle = {Journal of Geophysical Research: Biogeosciences},
+  volume = {120},
+  number = {2},
+  pages = {294--309},
+  issn = {2169-8961},
+  doi = {10.1002/2014JG002774},
+  url = {http://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2014JG002774},
+  urldate = {2021-08-08},
+  abstract = {Leaf area index and leaf area density profiles are key variables for upscaling from leaves to ecosystems yet are difficult to measure well in dense and tall forest canopies. We present a new model to estimate leaf area density profiles from discrete multireturn data derived by airborne waveform light detection and ranging (lidar), a model based on stochastic radiative transfer theory. We tested the method on simulated ray tracing data for highly clumped forest canopies, both vertically homogenous and vertically inhomogeneous. Our method was able to reproduce simulated vertical foliage profiles with small errors and predictable biases in dense canopies (leaf area index = 6) including layers below densely foliated upper canopies. As a case study, we then applied the method to real multireturn airborne lidar data for a 50 ha plot of moist tropical forest on Barro Colorado Island, Panama. The method is suitable for estimating foliage profiles in a complex tropical forest, which opens new avenues for analyses of spatial and temporal variations in foliage distributions.},
+  langid = {english},
+  keywords = {complex forest,leaf area density,leaf area index,multireturn lidar,tropical forest,waveform lidar},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/2014JG002774}
+}
+
 @article{dewarWhyDoesLeaf2012,
   title = {Why Does Leaf Nitrogen Decline within Tree Canopies Less Rapidly than Light? {{An}} Explanation from Optimization Subject to a Lower Bound on Leaf Mass per Area},
   shorttitle = {Why Does Leaf Nitrogen Decline within Tree Canopies Less Rapidly than Light?},
@@ -2013,6 +2049,24 @@
   abstract = {Independent verification of anthropogenic influence on specific extreme climate events remains elusive. This study presents a framework for such verification. This framework reveals that previously published results based on a 1961–2005 attribution period frequently underestimate the influence of global warming on the probability of unprecedented extremes during the 2006–2017 period. This underestimation is particularly pronounced for hot and wet events, with greater uncertainty for dry events. The underestimation is reflected in discrepancies between probabilities predicted during the attribution period and frequencies observed during the out-of-sample verification period. These discrepancies are most explained by increases in climate forcing between the attribution and verification periods, suggesting that 21st-century global warming has substantially increased the probability of unprecedented hot and wet events. Hence, the use of temporally lagged periods for attribution—and, more broadly, for extreme event probability quantification—can cause underestimation of historical impacts, and current and future risks. Using out-of-sample observations to verify extreme event attribution results. Using out-of-sample observations to verify extreme event attribution results.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\YNDYGMJW\\Diffenbaugh - 2020 - Verification of extreme event attribution Using o.pdf}
+}
+
+@article{disneyInnovationsGroundAirborne2019,
+  title = {Innovations in {{Ground}} and {{Airborne Technologies}} as {{Reference}} and for {{Training}} and {{Validation}}: {{Terrestrial Laser Scanning}} ({{TLS}})},
+  shorttitle = {Innovations in {{Ground}} and {{Airborne Technologies}} as {{Reference}} and for {{Training}} and {{Validation}}},
+  author = {Disney, M. and Burt, A. and Calders, K. and Schaaf, C. and Stovall, A.},
+  date = {2019-07},
+  journaltitle = {Surv Geophys},
+  volume = {40},
+  number = {4},
+  pages = {937--958},
+  issn = {0169-3298, 1573-0956},
+  doi = {10.1007/s10712-019-09527-x},
+  url = {http://link.springer.com/10.1007/s10712-019-09527-x},
+  urldate = {2021-08-08},
+  abstract = {The use of terrestrial laser scanning (TLS) to provide accurate estimates of 3D forest canopy structure and above-ground biomass (AGB) has developed rapidly. Here, we provide an overview of the state of the art in using TLS for estimating forest structure for AGB. We provide a general overview of TLS methods and then outline the advantages and limitations of TLS for estimating AGB. We discuss the specific type of measurements that TLS can provide, tools and methods that have been developed for turning TLS point clouds into quantifiable metrics of tree size and volume, as well as some of the challenges to improving these measurements. We discuss the role of TLS for enabling accurate calibration and validation (cal/val) of Earth observation (EO)-derived estimates of AGB from spaceborne lidar and RADAR missions. We give examples of the types of TLS equipment that are in use and how these might develop in future, and we show examples of where TLS has already been applied to measuring AGB in the tropics in particular. Comparing TLS with harvested AGB shows r2\,{$>$}\,0.95 for all studies thus far, with absolute agreement to within 10\% at the individual tree level for all trees and to within 2\% in the majority of cases. Current limitations to the uptake of TLS include the capital cost of some TLS equipment, processing complexity and the relatively small coverage that is possible. We argue that combining TLS measurements with the existing ground-based survey approaches will allow improved allometric models and better cal/val, resulting in improved regional and global estimates of AGB from space, with better-characterised, lower uncertainties. The development of new, improved equipment and methods will accelerate this process and make TLS more accessible.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ESNRHQXL\\Disney et al. - 2019 - Innovations in Ground and Airborne Technologies as.pdf}
 }
 
 @article{doEnvironmentalInfluenceCanopy2005,
@@ -2511,6 +2565,25 @@
   abstract = {Heat wave frequency, duration, and intensity are predicted to increase with global warming, but the potential impacts of short‐term high temperature events on forest functioning remain virtually unst...},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\F9PXHZ59\\gcb.html}
+}
+
+@article{fisherECOSTRESSNASANext2020,
+  title = {{{ECOSTRESS}}: {{NASA}}'s {{Next Generation Mission}} to {{Measure Evapotranspiration From}} the {{International Space Station}}},
+  shorttitle = {{{ECOSTRESS}}},
+  author = {Fisher, Joshua B. and Lee, Brian and Purdy, Adam J. and Halverson, Gregory H. and Dohlen, Matthew B. and Cawse-Nicholson, Kerry and Wang, Audrey and Anderson, Ray G. and Aragon, Bruno and Arain, M. Altaf and Baldocchi, Dennis D. and Baker, John M. and Barral, Hélène and Bernacchi, Carl J. and Bernhofer, Christian and Biraud, Sébastien C. and Bohrer, Gil and Brunsell, Nathaniel and Cappelaere, Bernard and Castro-Contreras, Saulo and Chun, Junghwa and Conrad, Bryan J. and Cremonese, Edoardo and Demarty, Jérôme and Desai, Ankur R. and Ligne, Anne De and Foltýnová, Lenka and Goulden, Michael L. and Griffis, Timothy J. and Grünwald, Thomas and Johnson, Mark S. and Kang, Minseok and Kelbe, Dave and Kowalska, Natalia and Lim, Jong-Hwan and Maïnassara, Ibrahim and McCabe, Matthew F. and Missik, Justine E. C. and Mohanty, Binayak P. and Moore, Caitlin E. and Morillas, Laura and Morrison, Ross and Munger, J. William and Posse, Gabriela and Richardson, Andrew D. and Russell, Eric S. and Ryu, Youngryel and Sanchez-Azofeifa, Arturo and Schmidt, Marius and Schwartz, Efrat and Sharp, Iain and Šigut, Ladislav and Tang, Yao and Hulley, Glynn and Anderson, Martha and Hain, Christopher and French, Andrew and Wood, Eric and Hook, Simon},
+  date = {2020-04-01},
+  journaltitle = {Water Resources Research},
+  volume = {56},
+  number = {4},
+  pages = {e2019WR026058},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  issn = {1944-7973},
+  doi = {10.1029/2019WR026058},
+  url = {http://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019WR026058},
+  urldate = {2021-08-08},
+  abstract = {ECOSTRESS is a state-of-the-art combination of thermal bands, spatial and temporal resolutions, and measurement accuracy and precision Data from 82 eddy covariance sites were coalesced concurrently...},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\M576HJAZ\\Fisher et al. - 2020 - ECOSTRESS NASA's Next Generation Mission to Measu.pdf;C\:\\Users\\Me\\Zotero\\storage\\E9HBB969\\2019WR026058.html}
 }
 
 @article{fisherVegetationDemographicsEarth2018,
@@ -3485,6 +3558,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\GQF684KD\\Hu et al. - 2021 - Impacts of Canopy and Understory Nitrogen Addition.pdf}
 }
 
+@article{hulleyNewECOSTRESSMODIS2019,
+  title = {New {{ECOSTRESS}} and {{MODIS Land Surface Temperature Data Reveal Fine}}-{{Scale Heat Vulnerability}} in {{Cities}}: {{A Case Study}} for {{Los Angeles County}}, {{California}}},
+  shorttitle = {New {{ECOSTRESS}} and {{MODIS Land Surface Temperature Data Reveal Fine}}-{{Scale Heat Vulnerability}} in {{Cities}}},
+  author = {Hulley, Glynn and Shivers, Sarah and Wetherley, Erin and Cudd, Robert},
+  date = {2019-01},
+  journaltitle = {Remote Sensing},
+  volume = {11},
+  number = {18},
+  pages = {2136},
+  publisher = {{Multidisciplinary Digital Publishing Institute}},
+  doi = {10.3390/rs11182136},
+  url = {https://www.mdpi.com/2072-4292/11/18/2136},
+  urldate = {2021-08-08},
+  abstract = {Rapid 21st century urbanization combined with anthropogenic climate warming are significantly increasing heat-related health threats in cities worldwide. In Los Angeles (LA), increasing trends in extreme heat are expected to intensify and exacerbate the urban heat island effect, leading to greater health risks for vulnerable populations. Partnerships between city policymakers and scientists are becoming more important as the need to provide data-driven recommendations for sustainability and mitigation efforts becomes critical. Here we present a model to produce heat vulnerability index (HVI) maps driven by surface temperature data from National Aeronautics and Space Administration\&rsquo;s (NASA) new Ecosystem Spaceborne Thermal Radiometer Experiment on Space Station (ECOSTRESS) thermal infrared sensor. ECOSTRESS was launched in June 2018 with the capability to image fine-scale urban temperatures at a 70 m resolution throughout different times of the day and night. The HVI model further includes information on socio-demographic data, green vegetation abundance, and historical heatwave temperatures from the Moderate Resolution Imaging Spectroradiometer (MODIS) sensor onboard the Aqua spacecraft since 2002. During a period of high heat in July 2018, we identified the five most vulnerable communities at a sub-city block scale in the LA region. The persistence of high HVI throughout the day and night in these areas indicates a clear and urgent need for implementing cooling technologies and green infrastructure to curb future warming.},
+  issue = {18},
+  langid = {english},
+  keywords = {ECOSTRESS,heat,LST,MODIS,temperature,urban,urbanization,vulnerability},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\7VCMKIJR\\Hulley et al. - 2019 - New ECOSTRESS and MODIS Land Surface Temperature D.pdf;C\:\\Users\\Me\\Zotero\\storage\\PDCAT8IX\\2136.html}
+}
+
 @article{hurttTerrestrialModelsGlobal1998,
   title = {Terrestrial Models and Global Change: Challenges for the Future},
   shorttitle = {Terrestrial Models and Global Change},
@@ -3592,6 +3685,20 @@
   title = {Impacts of Leaf Age and Heat Stress Duration on Photosynthetic Gas Exchange and Foliar Nonstructural Carbohydrates in {{Coffea}} Arabica - {{Marias}} - 2017 - {{Ecology}} and {{Evolution}} - {{Wiley Online Library}}},
   url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1002/ece3.2681},
   urldate = {2021-08-01}
+}
+
+@online{InnovationsGroundAirborne,
+  title = {Innovations in {{Ground}} and {{Airborne Technologies}} as {{Reference}} and for {{Training}} and {{Validation}}: {{Terrestrial Laser Scanning}} ({{TLS}}) | {{SpringerLink}}},
+  url = {https://link-springer-com.smithsonian.idm.oclc.org/article/10.1007/s10712-019-09527-x},
+  urldate = {2021-08-08},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\SV6CPW48\\s10712-019-09527-x.html}
+}
+
+@online{InnovationsGroundAirbornea,
+  title = {Innovations in {{Ground}} and {{Airborne Technologies}} as {{Reference}} and for {{Training}} and {{Validation}}: {{Terrestrial Laser Scanning}} ({{TLS}}) | {{SpringerLink}}},
+  url = {https://link-springer-com.smithsonian.idm.oclc.org/article/10.1007/s10712-019-09527-x},
+  urldate = {2021-08-08},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BBHJMEWD\\s10712-019-09527-x.html}
 }
 
 @online{InteractionsWaterStress,
@@ -5954,6 +6061,26 @@
   abstract = {{$<$}h3{$>$}Abstract{$<$}/h3{$>$} {$<$}p{$>$}Microclimatic variability in tropical forests plays a key role in shaping species distributions and their ability to cope with environmental change, especially for ectotherms. Yet, currently available climatic datasets lack data from the forest interior and our knowledge of thermal tolerance among tropical ectotherms is limited. To tackle this, we studied natural variation in the microclimate experienced by a tropical genus of butterflies (\emph{Heliconius} sp.) along their Andean range across a single year. We found that the forest strongly buffers temperature and humidity in the understory, especially in the lowlands where temperatures are more extreme. There were systematic differences between our yearly records and macroclimate databases (WorldClim2), with lower interpolated minimum temperatures and maximum temperatures higher than expected. We then assessed thermal tolerance of ten \emph{Heliconius} butterfly species in the wild and showed that populations at high elevations had significantly lower heat tolerance than those at lower elevations. However, when we reared populations of the widespread \emph{H. erato} from high and low elevations in a common-garden environment, the difference in heat tolerance across elevations was reduced, indicating plasticity in this trait. Microclimate buffering is not currently captured in publicly available datasets but could be crucial for enabling upland shifting of species sensitive to heat such as highland \emph{Heliconius}. Plasticity in thermal tolerance may alleviate the effects of global warming on some widespread ectotherm species, but more research is needed to understand the long-term consequences of plasticity on populations and species.{$<$}/p{$><$}h3{$>$}Summary statement{$<$}/h3{$>$} {$<$}p{$>$}Tropical forests along the Andes were found to greatly buffer climate. The butterflies inhabiting high elevations were less thermally tolerant but not when reared in common-garden conditions, indicating plasticity.{$<$}/p{$>$}},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\V4T3ZLUX\\Montejo-Kovacevich et al. - 2019 - Microclimate buffering and thermal tolerance acros.pdf;C\:\\Users\\Me\\Zotero\\storage\\A7MKX6CF\\2019.12.19.882357v1.html}
+}
+
+@article{moorcroftMethodScalingVegetation2001,
+  title = {A {{Method}} for {{Scaling Vegetation Dynamics}}: {{The Ecosystem Demography Model}} (Ed)},
+  shorttitle = {A {{Method}} for {{Scaling Vegetation Dynamics}}},
+  author = {Moorcroft, P. R. and Hurtt, G. C. and Pacala, S. W.},
+  date = {2001},
+  journaltitle = {Ecological Monographs},
+  volume = {71},
+  number = {4},
+  pages = {557--586},
+  issn = {1557-7015},
+  doi = {10.1890/0012-9615(2001)071[0557:AMFSVD]2.0.CO;2},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/0012-9615%282001%29071%5B0557%3AAMFSVD%5D2.0.CO%3B2},
+  urldate = {2021-08-08},
+  abstract = {The problem of scale has been a critical impediment to incorporating important fine-scale processes into global ecosystem models. Our knowledge of fine-scale physiological and ecological processes comes from a variety of measurements, ranging from forest plot inventories to remote sensing, made at spatial resolutions considerably smaller than the large scale at which global ecosystem models are defined. In this paper, we describe a new individual-based, terrestrial biosphere model, which we label the ecosystem demography model (ED). We then introduce a general method for scaling stochastic individual-based models of ecosystem dynamics (gap models) such as ED to large scales. The method accounts for the fine-scale spatial heterogeneity within an ecosystem caused by stochastic disturbance events, operating at scales down to individual canopy-tree-sized gaps. By conditioning appropriately on the occurrence of these events, we derive a size- and age-structured (SAS) approximation for the first moment of the stochastic ecosystem model. With this approximation, it is possible to make predictions about the large scales of interest from a description of the fine-scale physiological and population-dynamic processes without simulating the fate of every plant individually. We use the SAS approximation to implement our individual-based biosphere model over South America from 15° N to 15° S, showing that the SAS equations are accurate across a range of environmental conditions and resulting ecosystem types. We then compare the predictions of the biosphere model to regional data and to intensive data at specific sites. Analysis of the model at these sites illustrates the importance of fine-scale heterogeneity in governing large-scale ecosystem function, showing how population and community-level processes influence ecosystem composition and structure, patterns of aboveground carbon accumulation, and net ecosystem production.},
+  langid = {english},
+  keywords = {biogeochemical dynamics,ecosystem dynamics,ecosystem model,individual-based model,moment approximation,plant community dynamics,scaling,size- and age-structured,South America,sub-grid scale heterogeneity,terrestrial,terrestrial biosphere model,vegetation dynamics},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/0012-9615\%282001\%29071\%5B0557\%3AAMFSVD\%5D2.0.CO\%3B2},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\F7GKKW8W\\Moorcroft et al. - 2001 - A Method for Scaling Vegetation Dynamics The Ecos.pdf;C\:\\Users\\Me\\Zotero\\storage\\659LSGXK\\0012-9615(2001)071[0557AMFSVD]2.0.html}
 }
 
 @article{muir_tealeaves_2019,
