--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -398,9 +398,9 @@ Though an improvement over big-leaf models, DGVMs that separate the canopy into 
 
 **Scaling in situ data with remote sensing**
 
-Remote sensing data provide a valuable means to scale between in situ observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne LiDAR and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. 6). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor (Hulley et al. 2019, Fisher et al. 2020) or drone- and tower-based FLIR cameras. 
+Remote sensing data provide a valuable means to scale between in situ observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne LiDAR and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. 6). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based FLIR cameras. 
 
-Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions (Disney et al. 2019), evaluate spatial variation in vertical leaf area density profiles (Detto et al. 2015), and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems (Musselman et al. 2013). In addition, shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other LIDAR-based analyses (e.g., Davis et al. 2019). Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures (Johnston et al. in review). (Pau et al. 2018) used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than air temperatures or VPD. In a savanna system in the western U.S., (Johnston et al. in review) found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies. This finding was the opposite of what was expected and occurred in association with very high grass temperatures. The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of in situ measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
+Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013]. In addition, shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other LIDAR-based analyses (e.g., Davis et al. 2019). Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures (Johnston et al. in review). (Pau et al. 2018) used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than air temperatures or VPD. In a savanna system in the western U.S., (Johnston et al. in review) found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies. This finding was the opposite of what was expected and occurred in association with very high grass temperatures. The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of in situ measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
 
 
 
